[workspace]
resolver = "3"
members = ["cobalt-*"]

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.18"
flate2 = "1.1.9"
derive-new = "0.7.0"
uuid = { version = "1.23.1", features = ["v4", "v3", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
