[package]
name = "cobalt-protocol"
version = "0.1.0"
edition = "2024"

[features]
default = ["async"]
async = ["tokio"]
sync = []

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
openssl = "0.10.78"
num-bigint = "0.4.6"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"
derive-new = { workspace = true }
uuid = { workspace = true }
